--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header id="header">
         <h1 id="page-title">VCS 2.4</h1>
-        <h2 id="naam">Student-naam</h2>
-        <p id="version">Versie: 1</p>
+        <h2 id="naam">William van der Brugge</h2>
+        <p id="version">Versie: 1.1</p>
     </header>
 
     <main>
