src van img aangepast en afbeeldingen ingevoegd

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header">
         <h1 id="page-title">VCS 2.4</h1>
         <h2 id="naam">William van der Brugge</h2>
-        <p id="version">Versie: 1.1</p>
+        <p id="version">Versie: 1.2</p>
     </header>
 
     <main>
@@ -22,7 +22,7 @@
                     <h2>Introductie</h2>
                 </div>
                 <div class="meta big">
-                    <img src="images/git.jpg">
+                    <img src="img/git.jpg">
                 </div>
             </header>
 
@@ -59,7 +59,7 @@
                     <h2>Student naam wijzigen</h2>
                 </div>
                 <div class="meta">
-                    <img src="images/placeholder.png">
+                    <img src="img/william.png">
                 </div>
             </header>
 
@@ -80,7 +80,7 @@
                     <h2>Afbeeldingen toevoegen</h2>
                 </div>
                 <div class="meta">
-                    <img src="images/placeholder.png">
+                    <img src="img/william.png">
                 </div>
             </header>
 
